feat: 포스트 작성 중 이탈 시, 방지 문구 처리

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-gen": "pnpm dlx supabase gen types typescript --project-id \"sajnsmhqdudlqhxhjste\" --schema public > src/database.types.ts"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/supabase-js": "^2.90.1",
