--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,14 @@
 {
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "proseWrap": "never",
+  "endOfLine": "lf",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
